Extra header upon form, changing value on reply

--- a/web/js/templates/form.html
+++ b/web/js/templates/form.html
@@ -1,4 +1,5 @@
 <form id="commenter-form">
+	<h3>Add a comment</h3>
 	<input type="hidden" name="objectId" value="<%= comment.get('objectId') %>" />
 	<input type="hidden" name="id" value="<%= comment.get('id') %>" />
 	<input type="hidden" name="parentId" value="<%= comment.get('parentId') %>" />
