--- a/web/css/commenter.css
+++ b/web/css/commenter.css
@@ -45,3 +45,9 @@
 .commenter-container #commenter-form h3 {
 	margin-top: 0;
 }
+
+.commenter-container p.commenter-edited {
+	margin-top: 0.5em;
+	font-style: italic;
+	color: #444;
+}
